# models-dev

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
node/: README.md  package.json  tsconfig.json
node/scripts/: build.ts  update.ts
node/src/: data.ts  index.ts  types.ts  unpack.ts
node/tests/: data.test.ts
python/: LICENSE  README.md  pyproject.toml
python/scripts/: update.py
python/src/models_dev/: __init__.py  _loader.py  _types.py
python/tests/: test_data.py
scripts/: update.py
src/models_dev/: __init__.py  _types.py
